--- a/src/Theme/style.css
+++ b/src/Theme/style.css
@@ -164,3 +164,10 @@ span{
 .bar{
     padding-right: 5px;
 }
+.menu{
+    top: 10px;
+    position: relative;
+}
+.active{
+    border: 1px solid yellowgreen;
+}
