--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,30 @@
     height: 11px;
     
 }
+
+
+
+
+
+.box p{
+    color: black;
+}
+.box{
+    width: 100%;
+}
+.img{
+    object-fit: cover;
+    width: 100%;
+}
+.card{
+    width: 300px;
+    margin: 20px;
+    border: 1px solid black;
+}
+.GridBox{
+    display: grid;
+    gap: 20px;
+}
+.card p{
+    color: black;
+}
